[project]
name = 'cluecoins'
description = 'A CLI tool to manage the database of Bluecoins, an awesome budget planner for Android'
license = 'MIT'
dynamic = ['version']
requires-python = '~=3.10'
dependencies = [
    'xdg~=5.1.1',
    'adbutils~=1.0.8',
    'click~=8.1.3',
    'requests~=2.28.1',
    'pytermgui~=7.2.0',
]
authors = [
  { name = 'Iuliia Kornilova', email = 'github@larnaa.pw' },
  { name = 'Lev Gorodetskiy', email = 'github@drsr.io' },
]

[project.scripts]
cluecoins = 'cluecoins.cli:root'

[tool.hatch.version]
path = 'src/cluecoins/__init__.py'

[tool.hatch.build.targets.wheel]
packages = ['src/cluecoins']

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.isort]
line_length = 120
force_single_line = true

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310']

[tool.flakeheaven]
format = 'colored'
max_line_length = 140
show_source = true
extended_default_ignore = []

[tool.flakeheaven.plugins]
"*" = ['+*']
pycodestyle = ['-*']
flake8-docstrings = ['-*']

[tool.hatch.envs.dev]
dependencies = [
    'types-requests~=2.28.11.2',
    'black~=22.3.0',
    'bump2version~=1.0.1',
    'diff-cover~=6.5.0',
    'flake8-comprehensions~=3.8.0',
    'flake8-bugbear~=22.1.11',
    'flake8-simplify~=0.19.2',
    'flakeheaven~=1.0.1',
    'isort~=5.9.3',
    'mypy~=0.960',
    'pytest~=7.1.2',
    'pytest-cov~=3.0.0',
    'pytest-xdist~=2.5.0',
    'adbutils~=1.0.9',
    'plantuml~=0.3.0',
    'PyYAML~=6.0',
]

[tool.hatch.envs.dev.scripts]
isort_ = 'isort src tests'
black_ = 'black src tests'
flake = 'flakeheaven lint src tests'
mypy_ = 'mypy src tests --strict'
test = '.venv/bin/python -m pytest --cov-report=term-missing --cov=cluecoins --cov-report=xml -v tests'
test-ci = 'pytest --cov-report=term-missing --cov=cluecoins --cov-report=xml -v tests'
cover = 'diff-cover --compare-branch=master coverage.xml'


lint = [
    'isort_',
    'black_',
    'flake',
    'mypy_',
]

all = [
    'lint',
    'test',
    'cover',
]

dump-schema = 'sqlite3 bluecoins.fydb .schema > bluecoins.sql'

ci = [
    'lint',
    'test-ci',
]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
